# HiGHS

./: .bazelrc  .clang-format  .clang_format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  25fv47_7.txt  BUILD.bazel  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.nix  FEATURES.md  FindCUDAConf.cmake  GITHASH  Gemfile  HApp.cpp  HConfig.h.bazel  HConst.h  HCrash.cpp  HCrash.h  HDualMulti.cpp  HDualRHS.h  HDualRow.cpp  HDualRow.h  HFactor.cpp  HFactor.h  HMatrix.h  HModel.cpp  HModel.h  HPreData.cpp  HPreData.h  HPresolve.cpp  HPresolve.h  HPrimal.h  (+88 more)
app/: CLI11.hpp  CMakeLists.txt  HighsAppExternalDeps.h  HighsRuntimeOptions.h  HighsRuntimeOptions_.h  RunHighs.cpp  cxxopts.hpp  highs_webdemo_shell.html
check/: Avgas.cpp  Avgas.h  CMakeLists.txt  ExperimentalHighsCupdlpx.cpp  ExperimentalHighsCupdlpx.h  ExperimentalPslpHiPdlp.cpp  ExperimentalPslpHiPdlp.h  HCheckConfig.h.bazel.in  HCheckConfig.h.in  HCheckConfig.h.meson.in  HiPdlpPslpBench.cpp  HighsCupdlpxBench.cpp  OsiUnitTest.cpp  SpecialLps.h  TestAlienBasis.cpp  TestBasis.cpp  TestBasisIO.cpp  TestBasisSolves.cpp  TestCAPI.c  TestCallbacks.cpp  TestCheckSolution.cpp  TestCrossover.cpp  TestDualise.cpp  TestDualize.cpp  TestEkk.cpp  TestFactor.cpp  TestFilereader.cpp  TestFortranAPI.f90  TestFreezeBasis.cpp  TestHSet.cpp  TestHighsCDouble.cpp  TestHighsExternalDeps.cpp  TestHighsGFkSolve.cpp  TestHighsHash.cpp  TestHighsHessian.cpp  TestHighsIntegers.cpp  TestHighsModel.cpp  TestHighsParallel.cpp  TestHighsRbTree.cpp  TestHighsSparseMatrix.cpp  (+59 more)
check/doctest/: TestGas11.cpp  TestPresolveColumnSingletons.cpp  TestPresolveIssue.cpp
check/hipo_test_option_files/: hipo_options_0
check/hpm_test_option_files/: hpm_options_0
check/instances/: 1448.lp  1449a.lp  1449b.lp  1451.lp  2122.lp  2171.mps  2821-duplicate.mps  2821-qmatrix.mps  2821-quadobj.mps  2821-summation.mps  2821.mps  2867.mps  2894.mps  3015.mps  WithInf.set  agg.mps  agg2.mps  agg3.mps  atwood0.mps  bandm.mps  beaconfd.mps  blend.mps  bnl1.mps  bnl2.mps  boeing1.mps  boeing2.mps  bore3d.mps  bound_implied.mps  brandy.mps  capri.mps  comment.mps  cplex1.mps  cycle.mps  czprob.mps  d2q06c.mps  d6cube.mps  dD2e.mps  dano3mip.mps  dcmulti.mps  dcp1.mps  (+131 more)
dev-presolve/: CMakeLists.txt  DevPresolveMain.cpp  DevPresolveMethods.hpp  TestPresolve.hpp  cmake_install.cmake
dev_presolve/: CMakeLists.txt  DevPresolveMain.cpp  DevPresolveMethods.hpp  DevScaffoldMain.cpp  TestPresolve.hpp
highspy/: CMakeLists.txt  README.md  __init__.py  highs.py  highs_bindings.cpp  highs_options.cpp  meson.build  pyproject.toml  setup.py  setup_.py  xx__init__.py  xxhighs.py
highspy-extras/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  build_backend.py  pyproject.toml
highspy-extras/highspy_extras/: __init__.py
highspy-extras/tests/: test_highspy_extras.py
highspy-hipo/: CMakeLists.txt  README.md  pyproject.toml
highspy-hipo/highspy_hipo/: __init__.py
highspy/highspy/: __init__.py  __init__.pyi  highs.py
highspy/tests/: test_highspy.py
scaffold/: CMakeLists.txt  ScaffoldMain.cpp  ScaffoldMethods.hpp
src/: CMakeLists.txt  Doxyfile  HAPI.cpp  HAPI.h  HApp.cpp  HApp.h  HConfig.h.bazel.in  HConfig.h.in  HConfig.h.meson.in  HConst.h  HCrash.cpp  HCrash.h  HDual.cpp  HDual.h  HDualMulti.cpp  HDualRHS.cpp  HDualRHS.h  HDualRow.cpp  HDualRow.h  HFactor.cpp  HFactor.h  HMPSIO.cpp  HMPSIO.h  HMPSIO_C.h  HMatrix.cpp  HMatrix.h  HModel.cpp  HModel.h  HModelCs.h  HMpsFF.cpp  HMpsFF.h  HPreData.cpp  HPreData.h  HPresolve.cpp  HPresolve.h  HPrimal.cpp  HPrimal.h  HRandom.h  HTester.cpp  HTester.h  (+33 more)
src/highspy/: __init__.py  __init__.pyi  _core.pyi  highs.py  highs_bindings.cpp
src/interfaces/: GAMS.cpp  MinimalAPI.cpp  OsiHiGHSSolverInterface.cpp  OsiHiGHSSolverInterface.hpp  highs.py  highs_api.cpp  highs_api.h  highs_c_api.cpp  highs_c_api.h  highs_csharp_api.cs  highs_fortran_api.f90  highs_java_api.cpp  highs_java_api.h  highs_julia_api.jl  highs_lp_solver.cs  highs_lp_solver.f90  highs_lp_solver.h  highs_lp_solver.jl  highs_lp_solver.py  highs_mip_solver.py  highs_python_api.py  highs_qp_solver.py  highscslib
src/interior_point/: IpxSolution.h  IpxStatus.h  IpxWrapper.h  IpxWrapperEmpty.h
src/io/: FileReaderEms.cpp  FileReaderEms.h  Filereader.cpp  Filereader.h  FilereaderEms.cpp  FilereaderEms.h  FilereaderLp.cpp  FilereaderLp.h  FilereaderMps.cpp  FilereaderMps.h  HMPSIO.cpp  HMPSIO.h  HMpsFF.cpp  HMpsFF.h  HToyIO.cpp  HToyIO.h  HToyIO_C.h  HighsIO.cpp  HighsIO.h  HinOut.cpp  HinOut.h  LoadOptions.cpp  LoadOptions.h  LoadProblem.cpp  LoadProblem.h
src/ipm/: IpxSolution.h  IpxStatus.h  IpxWrapper.cpp  IpxWrapper.h  IpxWrapperEmpty.h
src/lp_data/: HConst.h  HStruct.h  Highs.cpp  HighsAnalysis.h  HighsCallback.cpp  HighsCallback.h  HighsCallbackStruct.h  HighsDebug.cpp  HighsDebug.h  HighsDeprecated.cpp  HighsIis.cpp  HighsIis.h  HighsInfo.cpp  HighsInfo.h  HighsInfoDebug.cpp  HighsInfoDebug.h  HighsInterface.cpp  HighsLp.cpp  HighsLp.h  HighsLpSolverObject.h  HighsLpUtils.cpp  HighsLpUtils.h  HighsModel.cpp  HighsModel.h  HighsModelBuilder.cpp  HighsModelBuilder.h  HighsModelObject.h  HighsModelObjectUtils.h  HighsModelUtils.cpp  HighsModelUtils.h  HighsOptions.cpp  HighsOptions.h  HighsRanging.cpp  HighsRanging.h  HighsRuntimeOptions.h  HighsSetup.h  HighsSolution.cpp  HighsSolution.h  HighsSolutionDebug.cpp  HighsSolutionDebug.h  (+12 more)
src/man/: guide.md  interfaces.md  library.md  link.md  model-definition.md  options.md
src/mip/: HighsCliqueTable.cpp  HighsCliqueTable.h  HighsConflictPool.cpp  HighsConflictPool.h  HighsCutGeneration.cpp  HighsCutGeneration.h  HighsCutPool.cpp  HighsCutPool.h  HighsDebugSol.cpp  HighsDebugSol.h  HighsDomain.cpp  HighsDomain.h  HighsDomainChange.h  HighsDynamicRowMatrix.cpp  HighsDynamicRowMatrix.h  HighsFeasibilityJump.cpp  HighsGFkSolve.cpp  HighsGFkSolve.h  HighsImplications.cpp  HighsImplications.h  HighsLpAggregator.cpp  HighsLpAggregator.h  HighsLpRelaxation.cpp  HighsLpRelaxation.h  HighsMip.cpp  (+40 more)
unit_test/: CMakeLists.txt  ScaffoldTestHighsLp.cpp
(+20917 files in other folders)
